--- a/THISstyle.css
+++ b/THISstyle.css
@@ -62,15 +62,15 @@ html, body{
 
 footer{
     width: 100%;
-    background-color:slategray;
+    background-color:whitesmoke;
     padding: 5% 5% 10% 5%;
-    color:mistyrose;
+    color:black;
 }
 
 .fa {
     padding: 15px;
     font-size: 25px;
-    color: mistyrose;
+    color:slategray;
 }
 .fa:hover {
     color: black;
@@ -102,7 +102,16 @@ footer{
         max-width:100px;
     }
 }
-
+/*JSCODE DELETE IF BROKEN*/
+body {
+    background-color:snow;
+    text-align: center;
+    color:plum;
+    padding-top:10em;
+  }
+  
+  * { color:plum; text-decoration: none;}
+/*END OF JSCODE*/
 
 <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
 
